--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
   </style>
 </head>
 <body>
-  <h1>Embedded Hugging Face Space</h1>
-  <p>Below is the embedded Hugging Face Space from alphamike-mirai-mk-1:</p>
+  <h1>Mirai MK-1 Loading...</h1>
   <iframe
     src="https://alphamike-mirai-mk-1.hf.space"
     loading="lazy"
