--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </style>
 </head>
 <body>
-  <h1>Mirai MK-1 Loading...</h1>
+  <h1>MirAi MK-1 Loading...</h1>
   <iframe
     src="https://alphamike-mirai-mk-1.hf.space"
     loading="lazy"
